# argument-analysis-mcp

./: .env.example  README.md  pyproject.toml  specification.md
src/aa_mcp/: __init__.py  __main__.py  config.py  engine.py  lifespan.py  server.py
src/aa_mcp/analysis/: llm_caller.py  sampling.py
src/aa_mcp/loaders/: base.py  pdf.py  text.py  web.py
src/aa_mcp/models/: argument.py  mapping.py  rag.py
src/aa_mcp/rag/: chunker.py  embedder.py  pipeline.py
src/aa_mcp/rag/backends/: base.py  chroma.py
src/aa_mcp/store/: argument_store.py  document_store.py
src/aa_mcp/tools/: analysis.py  manage.py  mapping.py  rag_ingest.py  rag_search.py
tests/: conftest.py  test_argument_store.py  test_bulk_ingest.py  test_chunker.py  test_decomposer.py  test_engine.py  test_fallacy_detector.py  test_rag_pipeline.py
