[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argument-analysis-mcp"
version = "0.1.0"
description = "Local MCP server for assessing argument validity and truthfulness via RAG-grounded analysis"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sentence-transformers>=3.0",
    "chromadb>=0.5.0",
    "aiosqlite>=0.20",
    "pypdf>=5.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "anyio>=4.7",
]

[project.optional-dependencies]
sqlite-vec = ["sqlite-vec>=0.1.0"]
lancedb = ["lancedb>=0.14.0", "pyarrow>=18.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
aa-mcp-server = "aa_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aa_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
